# algorithms

./: .gitignore  .vimrc  CMakeLists.txt  Doxyfile  README.md  makefile
include/: algorithm.hpp  algorithms.hpp  array.hpp  bigint.hpp  derivative.hpp  find.hpp  graph.hpp  matrix.hpp  search.hpp  sort.hpp
test/: CMakeLists.txt
test/src/: main.cpp  test.cpp  test.h
